[project]
name = "vua"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Aloni", email = "dan.aloni@vastdata.com" }
]
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "accelerate>=1.5.2",
    "bitsandbytes>=0.45.3",
    "transformers>=4.49.0",
]

[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/vua/_version.py"
